// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebhookRouterForm > should render 1`] = `ShallowWrapper {}`;

exports[`WebhookRouterForm > updates > should repopulate post body 1`] = `
{
  "body": {
    "value": "",
  },
  "headers": [
    {
      "value": {
        "name": "Accept",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        "value": "application/json",
      },
    },
    {
      "value": {
        "name": "",
        "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        "value": "",
      },
    },
  ],
  "method": {
    "value": {
      "value": "GET",
    },
  },
  "resultName": {
    "value": "Result",
  },
  "url": {
    "validationFailures": [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm > updates > should repopulate post body 2`] = `
{
  "body": {
    "value": "@(json(object(
  "contact", object(
    "uuid", contact.uuid, 
    "name", contact.name, 
    "urn", contact.urn
  ),
  "flow", object(
    "uuid", run.flow.uuid, 
    "name", run.flow.name
  ),
  "results", foreach_value(results, extract_object, "value", "category")
)))",
  },
  "headers": [
    {
      "value": {
        "name": "Accept",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        "value": "application/json",
      },
    },
    {
      "validationFailures": undefined,
      "value": {
        "name": "Content-Type",
        "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        "value": "application/json",
      },
    },
    {
      "validationFailures": undefined,
      "value": {
        "name": "",
        "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
        "value": "",
      },
    },
  ],
  "method": {
    "value": "POST",
  },
  "resultName": {
    "value": "Result",
  },
  "url": {
    "validationFailures": [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm > updates > should save changes 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [
            {
              "body": "Updated post body",
              "headers": {
                "Accept": "application/json",
                "Content-Type": "application/json",
              },
              "method": "POST",
              "result_name": "My Webhook Result",
              "type": "call_webhook",
              "url": "http://app.rapidpro.io",
              "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            },
          ],
          "exits": [
            {
              "destination_uuid": null,
              "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            },
            {
              "destination_uuid": null,
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "Success",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_only_text",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
            ],
            "categories": [
              {
                "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                "name": "Success",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Failure",
                "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              },
            ],
            "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "operand": "@results.my_webhook_result.category",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {},
          "position": null,
          "type": "split_by_webhook",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
